// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion component should render an accordion with Markdown bold text 1`] = `
<div
  className="w-full leading-6"
>
  <button
    className="flex w-full text-left py-3 px-1 items-center border-b-[0.5px] border-b-[#DCDCDC] border-solid"
    onClick={[Function]}
  >
    <div
      className="w-full"
    >
      <h4
        className="font-['MuseoSans'] text-base font-medium text-shade-greyscale-grey-900"
      >
        Terms and Conditions
      </h4>
    </div>
    <div
      className="flex max-w-[40px] items-center justify-end"
    >
      <img
        alt="plus"
        className="object-cover"
        data-nimg="1"
        decoding="async"
        height={15}
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        src="_next/static/assets/plus.svg?width=32&quality=75"
        srcSet="_next/static/assets/plus.svg?width=16&quality=75 1x, _next/static/assets/plus.svg?width=32&quality=75 2x"
        style={
          {
            "backgroundImage": "url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http%3A//www.w3.org/2000/svg' viewBox='0 0 15 15'%3E%3Cfilter id='b' color-interpolation-filters='sRGB'%3E%3CfeGaussianBlur stdDeviation='20'/%3E%3C/filter%3E%3Cimage preserveAspectRatio='none' filter='url(%23b)' x='0' y='0' height='100%25' width='100%25' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mPs7+9bAQAFtwJW4mO4owAAAABJRU5ErkJggg=='/%3E%3C/svg%3E")",
            "backgroundPosition": "50% 50%",
            "backgroundRepeat": "no-repeat",
            "backgroundSize": "cover",
            "color": "transparent",
          }
        }
        width={15}
      />
    </div>
  </button>
  <div
    className="duration-200 ease-in-out hidden font-['MuseoSans'] py-3 text-base break-words font-light leading-5 whitespace-pre-wrap"
  >
    <span>
      This is an 
      <strong>
        accordion
      </strong>
       message.
    </span>
  </div>
</div>
`;

exports[`Accordion component should render an accordion with simple text 1`] = `
<div
  className="w-full leading-6"
>
  <button
    className="flex w-full text-left py-3 px-1 items-center border-b-[0.5px] border-b-[#DCDCDC] border-solid"
    onClick={[Function]}
  >
    <div
      className="w-full"
    >
      <h4
        className="font-['MuseoSans'] text-base font-medium text-shade-greyscale-grey-900"
      >
        Simple accordion message
      </h4>
    </div>
    <div
      className="flex max-w-[40px] items-center justify-end"
    >
      <img
        alt="plus"
        className="object-cover"
        data-nimg="1"
        decoding="async"
        height={15}
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        src="_next/static/assets/plus.svg?width=32&quality=75"
        srcSet="_next/static/assets/plus.svg?width=16&quality=75 1x, _next/static/assets/plus.svg?width=32&quality=75 2x"
        style={
          {
            "backgroundImage": "url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http%3A//www.w3.org/2000/svg' viewBox='0 0 15 15'%3E%3Cfilter id='b' color-interpolation-filters='sRGB'%3E%3CfeGaussianBlur stdDeviation='20'/%3E%3C/filter%3E%3Cimage preserveAspectRatio='none' filter='url(%23b)' x='0' y='0' height='100%25' width='100%25' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mPs7+9bAQAFtwJW4mO4owAAAABJRU5ErkJggg=='/%3E%3C/svg%3E")",
            "backgroundPosition": "50% 50%",
            "backgroundRepeat": "no-repeat",
            "backgroundSize": "cover",
            "color": "transparent",
          }
        }
        width={15}
      />
    </div>
  </button>
  <div
    className="duration-200 ease-in-out hidden font-['MuseoSans'] py-3 text-base break-words font-light leading-5 whitespace-pre-wrap"
  >
    This is a simple accordion message.
  </div>
</div>
`;
